# CPPCourseIntroduction

./: .gitattributes  .gitignore  LICENSE  README.md
exercises/: README.md  exercise01.md  exercise02-extra.md  exercise02.md  exercise03.md  exercise04.md  exercise05.md  exercise06.md  exercise07.md  exercise08.md  exercise09.md  exercise1.md  exercise10.md  exercise11.md  exercise2.md  exercise4.md  exercise5.md  exercise6.md  exercise7.md  exercise8.md  exercise9.md  manualsetupenvironment.md
exercises/exercise01/: README.md
exercises/exercise02/: exercise02-extra.md
exercises/exercise03/: README.md
exercises/exercise04/: README.md
exercises/exercise05/: README.md
exercises/exercise07/: README.md
src/: AlgorithmsWith_if.cpp  AlgorithmsWith_n.cpp  CaselessSet.cpp  Counter.cpp  Counter.h  CounterTest.cpp  EraseRemove.cpp  FunctionObject.cpp  VariationVariant.cpp  VariationVirtual.cpp  abstractionexample.cpp  accumulatedistance.cpp  applyAndPrint.cpp  applyAndPrintLambda.cpp  commoncontainerapi.cpp  countBlanks.cpp  countstringsmap.cpp  countstringsunorderedmap.cpp  countvowels.cpp  factorial.cpp  fillvector.cpp  find.cpp  foreachlambda.cpp  foreachprint.cpp  formattedOutput.cpp  hello.cpp  hellocatch2.cpp  hellodoctest.cpp  hellogtest.cpp  hellosimplefmt.cpp  iile.cpp  inputNumber.cpp  inputNumberIgnore.cpp  inputNumberRobust.cpp  istreambufiterator.cpp  mutablevariable.cpp  sortedstringlistmultimap.cpp  standardexceptions.cpp  stdfunction.cpp  unformattedtolower.cpp  (+4 more)
src/ce_hello/: CMakeLists.txt
ws-trivia/algorithm_trivia/: .cproject  CMakeLists.txt
(+273 files in other folders)
